--- a/views/index.html
+++ b/views/index.html
@@ -10,8 +10,8 @@
    <body>
       <header>
          <ul>
-            <li><a href="#">Teachers</a></li>
-            <li><a href="#">Students</a></li>
+            <li><a href="/">Teachers</a></li>
+            <li><a href="/main/cadastro">Students</a></li>
          </ul>
       </header>
 
@@ -25,11 +25,15 @@
                "
             ></section>
             <section class="details">
-               <div class="title">
-                  <h1>Nome</h1>
-                  <h4>idade - 36</h4>
-               </div>
                <ul>
+                  <li>
+                     <h1>Professor</h1>
+                     <p>Marcos Cruz</p>
+                  </li>
+                  <li>
+                     <h3>Idade</h3>
+                     <p>31</p>
+                  </li>
                   <li>
                      <h3>Matéria</h3>
                      <p>Fisíca</p>
