--- a/views/form.html
+++ b/views/form.html
@@ -46,7 +46,7 @@
                   <div>
                      <input
                         type="text"
-                        name="name"
+                        name="nome"
                         id=""
                         placeholder="Nome do professor"
                      />
@@ -58,7 +58,7 @@
                   <div>Data de Nascimento</div>
 
                   <div>
-                     <input type="date" name="birth" />
+                     <input type="date" name="idade" />
                   </div>
                </div>
 
@@ -67,7 +67,7 @@
                   <div>Grau de escolaridade:</div>
                
                   <div>               
-                     <select name="Escolaridade">
+                     <select name="escolaridade">
                         <option value="Superior" 
                            {% if membro.blood == "Superior" %}
                            selected
