--- a/views/teachers/fields.njk
+++ b/views/teachers/fields.njk
@@ -1,80 +1,82 @@
-<!--FOTO PERFIL-->
 <div class="item">
-   <div>Avatar URL</div>
-   <div>
-      <input 
-         type="url" 
-         name="avatar_url" 
-         id="" 
-         placeholder="https://" 
-         value="{{ teacher.avatar_url }}">
-   </div>
+  <div>Avatar URL</div>
+
+  <div>
+    <input 
+      type="url" 
+      name="avatar_url" id="" 
+      placeholder="https://"
+      value="{{ teacher.avatar_url }}">
+  </div>
+
 </div>
 
-<!--NOME INSTRUTOR-->
 <div class="item">
-   <div>Professor</div>
-   <div>
-      <input 
-         type="text" 
-         name="nome" 
-         id="" 
-         placeholder="Nome do Professor" 
-         value="{{ teacher.nome }}">
-   </div>
+  <div>Professor</div>
+
+  <div>
+    <input 
+      type="text" 
+      name="nome" id="" 
+      placeholder="Nome do Professor"
+      value="{{ teacher.nome }}">
+  </div>
+
 </div>
 
-<!--DATA DE NASCIMENTO INSTRUTOR-->
+
 <div class="item">
-   <div>Data de Nascimento</div>
-   <div>
-      <input 
-         type="date" 
-         name="idade" 
-         value="{{ teacher.idade }}">
-   </div>
+  <div>Data de Nascimento</div>
+
+  <div>
+    <input 
+      type="date" 
+      name="idade" 
+      value="{{ teacher.idade }}">
+  </div>
+
 </div>
 
-<!--SEXO INSTRUTOR-->
 <div class="item">
-   <div>Sexo</div>
+  <div>Graduação</div>
 
-   <div>
-      <span>
-         <input 
-            type="radio" 
-            name="gender" 
-            id="" 
-            value="M" 
-            {% if teacher.gender == "M" %} 
-               checked 
-            {% endif %}>
-            Masculino
-      </span>
-      <span>
-         <input 
-            type="radio" 
-            name="gender" 
-            id="" 
-            value="F" 
-            {% if teacher.gender == "F" %}
-               checked 
-            {% endif %}>
-            Feminino
-      </span>
-   </div>
+  <div>
+     <select name="graduacao">
+         <option value="Superior" {% if teacher.graduacao=="Superior" %} selected {% endif %}>
+            Superior
+         </option>
+
+         <option value="Pós-graduação" {% if teacher.graduacao=="Pós-graduação" %} selected {% endif %}>
+            Pós-graduação
+         </option>
+
+         <option value="Mestrado" {% if teacher.graduacao=="Mestrado" %} selected {% endif %}>
+            Mestrado
+         </option>
+
+         <option value="Especialista" {% if teacher.graduacao=="Especialista" %} selected {% endif %}>
+            Especialista
+         </option>
+
+         <option value="Doutorado" {% if teacher.graduacao=="Doutorado" %} selected {% endif %}>
+            Doutorado
+         </option>
+      </select>
+  </div>
 
 </div>
-             
+
 <!--SERVIÇOS PRESTADO PELO INSTRUTOR-->
 <div class="item">
-   <div>Area de Atuação</div>
-   <div>
-      <input 
-         type="text" 
-         name="materia" 
-         placeholder="Separe o Serviço por virgula" 
-         value="{{ teacher.materia }}">
-   </div>
+  <div>Area de Atuação</div>
+
+  <div>
+    <input 
+    type="text" 
+    name="materia" 
+    placeholder="Separe o Serviço por virgula"
+    value="{{ teacher.materia }}">
+  </div>
 </div>
-   <button type="submit">Salvar</button>
+
+<button type="submit">Salvar</button>
